# llm-bedrock

./: README.md  llm_bedrock.py  pyproject.toml
tests/: test_bedrock.py
tests/cassettes/test_bedrock/: test_conversation.yaml  test_prompt.yaml
